--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>Immersive AR with Three.js</h1>
+        <h1>Immersive AR with Three.js Nyoba</h1>
     </header>
     <script type="module" src="index.js"></script>
 </body>
